main/default/objects/pharos__AI_Event__e/fields/pharos__Analysis__c.field-meta.xml
<CustomField>
    <fullName>pharos__Analysis__c</fullName>
    <label>Analysis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>