main/default/objects/pharos__AI_Event__e/fields/pharos__Method__c.field-meta.xml
<CustomField>
    <fullName>pharos__Method__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>