main/default/objects/pharos__AI_Event__e/fields/pharos__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>pharos__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>