main/default/objects/pharos__AI_Event__e/fields/pharos__Result__c.field-meta.xml
<CustomField>
    <fullName>pharos__Result__c</fullName>
    <label>Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>