main/default/objects/pharos__AI_Event__e/fields/pharos__Status__c.field-meta.xml
<CustomField>
    <fullName>pharos__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>